// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppInstallations should match a snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <h1
        class="el-text-base el-title"
      >
        Installations
      </h1>
      <p
        class="el-text-base el-body-text el-has-grey-text el-has-section-margin"
      >
        The table below gives you the information you need to understand Reapit Client organisations that have installed your application for use. In addition, you can force terminate a customer installation by using the call to action on each row. For more information on the installations table
        <a>
           see here
        </a>
        .
      </p>
      <div
        class="el-mb11 el-table"
        data-has-call-to-action="false"
        data-has-expandable-action="true"
        data-num-columns-excl-action-col="5"
        role="table"
      >
        <div
          class="mocked-styled-101 el-table-headers-row"
          role="row"
        >
          <div
            aria-label="Customer Name"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Customer Name
          </div>
          <div
            aria-label="Reapit Customer Code"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Reapit Customer Code
          </div>
          <div
            aria-label="Customer Address"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Customer Address
          </div>
          <div
            aria-label="Date Installed"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Date Installed
          </div>
          <div
            aria-label="Installed By"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Installed By
          </div>
          <div
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            <span
              class="el-intent-default el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                title="Icon image with name settings"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.2 7.2 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.5 7.5 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.5 6.5 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.2 7.2 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27zM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="mocked-styled-110 el-table-row-container"
          role="row"
        >
          <div
            class="mocked-styled-103 el-table-row"
          >
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <span
                class="el-intent-default el-icon"
                style="font-size: 1.25rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  style="font-size: 1.25rem;"
                  title="Icon image with name flatInfographic"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    clip-path="url(#flatInfographic_svg__a)"
                  >
                    <path
                      d="M20 20h-9V4h9v16"
                      fill="#d8dee4"
                    />
                    <path
                      d="M13 2h-1v18h1zM1.28 0v1.787H0V20h12V0z"
                      fill="#798da1"
                    />
                    <path
                      d="M5.149 4.505H3.617V6.38H5.15zM8.962 4.505H7.43V6.38h1.532zM3.617 8.255H5.15v1.875H3.617zM8.962 8.255H7.43v1.875h1.532zM3.617 12.006H5.15v1.875H3.617zM8.962 12.006H7.43v1.875h1.532zM3.617 15.756H5.15v1.875H3.617zM8.962 15.756H7.43v1.875h1.532z"
                      fill="#fff"
                    />
                    <path
                      d="M16.281 8.255h-1.532v1.875h1.532zM16.281 12.006h-1.532v1.875h1.532z"
                      fill="#798da1"
                    />
                  </g>
                  <defs>
                    <clippath
                      id="flatInfographic_svg__a"
                    >
                      <path
                        d="M0 0h20v20H0z"
                        fill="#fff"
                      />
                    </clippath>
                  </defs>
                </svg>
              </span>
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Customer Name"
              >
                Reapit Sales
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Reapit Customer Code"
              >
                RES
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Customer Address"
              >
                1 Big House Something Something UK BB1 1BB
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Date Installed"
              >
                23-03-2022
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Installed By"
              >
                <a
                  href="mailto:example@mail.com?subject=Your%20recent%20installation%20of%20MOCK_APP_NAME%20in%20the%20Reapit%20AppMarket"
                  rel="noreferrer"
                  target="_blank"
                >
                  example@mail.com
                </a>
              </div>
            </div>
            <div
              class="mocked-styled-109 el-table-expandable-row-trigger-cell"
              role="cell"
              tabindex="0"
            >
              <span
                class="el-intent-default el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  title="Icon image with name more"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="mocked-styled-113 el-table-expandable-row"
          >
            <div
              class="mocked-styled-114 el-table-expandable-container"
            >
              <div
                class="mocked-styled-2 el-button-group"
              >
                <div
                  class="el-button-group-align-center el-button-group-inner"
                >
                  <button
                    class="el-intent-primary el-button"
                  >
                    <div
                      class="mocked-styled-0 el-button-loader"
                    />
                    Show Installed Offices
                  </button>
                  <button
                    class="el-intent-danger el-button"
                    type="button"
                  >
                    <div
                      class="mocked-styled-0 el-button-loader"
                    />
                    Uninstall
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mocked-styled-110 el-table-row-container"
          role="row"
        >
          <div
            class="mocked-styled-103 el-table-row"
          >
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <span
                class="el-intent-default el-icon"
                style="font-size: 1.25rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  style="font-size: 1.25rem;"
                  title="Icon image with name flatInfographic"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    clip-path="url(#flatInfographic_svg__a)"
                  >
                    <path
                      d="M20 20h-9V4h9v16"
                      fill="#d8dee4"
                    />
                    <path
                      d="M13 2h-1v18h1zM1.28 0v1.787H0V20h12V0z"
                      fill="#798da1"
                    />
                    <path
                      d="M5.149 4.505H3.617V6.38H5.15zM8.962 4.505H7.43V6.38h1.532zM3.617 8.255H5.15v1.875H3.617zM8.962 8.255H7.43v1.875h1.532zM3.617 12.006H5.15v1.875H3.617zM8.962 12.006H7.43v1.875h1.532zM3.617 15.756H5.15v1.875H3.617zM8.962 15.756H7.43v1.875h1.532z"
                      fill="#fff"
                    />
                    <path
                      d="M16.281 8.255h-1.532v1.875h1.532zM16.281 12.006h-1.532v1.875h1.532z"
                      fill="#798da1"
                    />
                  </g>
                  <defs>
                    <clippath
                      id="flatInfographic_svg__a"
                    >
                      <path
                        d="M0 0h20v20H0z"
                        fill="#fff"
                      />
                    </clippath>
                  </defs>
                </svg>
              </span>
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Customer Name"
              >
                Foo Bar
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Reapit Customer Code"
              >
                MXX
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Customer Address"
              >
                1 Big House Something Something UK BB1 1BB
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Date Installed"
              >
                11-01-2022
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Installed By"
              >
                <a
                  href="mailto:example@mail.com?subject=Your%20recent%20installation%20of%20MOCK_APP_NAME_TWO%20in%20the%20Reapit%20AppMarket"
                  rel="noreferrer"
                  target="_blank"
                >
                  example@mail.com
                </a>
              </div>
            </div>
            <div
              class="mocked-styled-109 el-table-expandable-row-trigger-cell"
              role="cell"
              tabindex="0"
            >
              <span
                class="el-intent-default el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  title="Icon image with name more"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="mocked-styled-113 el-table-expandable-row"
          >
            <div
              class="mocked-styled-114 el-table-expandable-container"
            >
              <div
                class="mocked-styled-2 el-button-group"
              >
                <div
                  class="el-button-group-align-center el-button-group-inner"
                >
                  <button
                    class="el-intent-danger el-button"
                    type="button"
                  >
                    <div
                      class="mocked-styled-0 el-button-loader"
                    />
                    Uninstall
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mocked-styled-71 el-pagination-wrap"
      >
        <button
          aria-label="Previous"
          class="mocked-styled-74 el-pagination-button"
          data-testid="back-button"
          role="button"
          type="button"
        >
          <span
            class="el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name chevronLeft"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.496 20.004a1 1 0 0 1-.71-.29l-6.99-7a1 1 0 0 1 0-1.42l6.99-7a1.002 1.002 0 0 1 1.678.45c.093.347-.006.716-.26.97l-6.291 6.29 6.292 6.29a1 1 0 0 1-.71 1.71"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <div
          class="mocked-styled-72 el-pagination-text"
        >
          <input
            aria-label="Current page number, edit to select page of 1 available"
            class="mocked-styled-73 el-pagination-input"
            value="1"
          />
           
          of 
          1
        </div>
        <button
          aria-label="Next"
          class="mocked-styled-74 el-pagination-button"
          data-testid="forward-button"
          role="button"
          type="button"
        >
          <span
            class="el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name chevronRight"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.505 20.004a1 1 0 0 1-1.005-1 1 1 0 0 1 .295-.71l6.292-6.29-6.292-6.29a1.005 1.005 0 0 1 0-1.42 1 1 0 0 1 1.419 0l6.99 7a1 1 0 0 1 0 1.42l-6.99 7a1 1 0 0 1-.71.29"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        aria-hidden="true"
        class="mocked-styled-146 el-mobile-controls-bg"
      />
      <div
        class="mocked-styled-147 el-mobile-controls"
        id=":r1:"
      >
        <button
          aria-controls=":r1:"
          class="el-floating-button el-intent-primary el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          <span
            class="el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name menu"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <h1
      class="el-text-base el-title"
    >
      Installations
    </h1>
    <p
      class="el-text-base el-body-text el-has-grey-text el-has-section-margin"
    >
      The table below gives you the information you need to understand Reapit Client organisations that have installed your application for use. In addition, you can force terminate a customer installation by using the call to action on each row. For more information on the installations table
      <a>
         see here
      </a>
      .
    </p>
    <div
      class="el-mb11 el-table"
      data-has-call-to-action="false"
      data-has-expandable-action="true"
      data-num-columns-excl-action-col="5"
      role="table"
    >
      <div
        class="mocked-styled-101 el-table-headers-row"
        role="row"
      >
        <div
          aria-label="Customer Name"
          class="mocked-styled-102 el-table-header"
          role="columnheader"
        >
          Customer Name
        </div>
        <div
          aria-label="Reapit Customer Code"
          class="mocked-styled-102 el-table-header"
          role="columnheader"
        >
          Reapit Customer Code
        </div>
        <div
          aria-label="Customer Address"
          class="mocked-styled-102 el-table-header"
          role="columnheader"
        >
          Customer Address
        </div>
        <div
          aria-label="Date Installed"
          class="mocked-styled-102 el-table-header"
          role="columnheader"
        >
          Date Installed
        </div>
        <div
          aria-label="Installed By"
          class="mocked-styled-102 el-table-header"
          role="columnheader"
        >
          Installed By
        </div>
        <div
          class="mocked-styled-102 el-table-header"
          role="columnheader"
        >
          <span
            class="el-intent-default el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name settings"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.2 7.2 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.5 7.5 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.5 6.5 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.2 7.2 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27zM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
                fill="currentColor"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="mocked-styled-110 el-table-row-container"
        role="row"
      >
        <div
          class="mocked-styled-103 el-table-row"
        >
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <span
              class="el-intent-default el-icon"
              style="font-size: 1.25rem;"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                style="font-size: 1.25rem;"
                title="Icon image with name flatInfographic"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-path="url(#flatInfographic_svg__a)"
                >
                  <path
                    d="M20 20h-9V4h9v16"
                    fill="#d8dee4"
                  />
                  <path
                    d="M13 2h-1v18h1zM1.28 0v1.787H0V20h12V0z"
                    fill="#798da1"
                  />
                  <path
                    d="M5.149 4.505H3.617V6.38H5.15zM8.962 4.505H7.43V6.38h1.532zM3.617 8.255H5.15v1.875H3.617zM8.962 8.255H7.43v1.875h1.532zM3.617 12.006H5.15v1.875H3.617zM8.962 12.006H7.43v1.875h1.532zM3.617 15.756H5.15v1.875H3.617zM8.962 15.756H7.43v1.875h1.532z"
                    fill="#fff"
                  />
                  <path
                    d="M16.281 8.255h-1.532v1.875h1.532zM16.281 12.006h-1.532v1.875h1.532z"
                    fill="#798da1"
                  />
                </g>
                <defs>
                  <clippath
                    id="flatInfographic_svg__a"
                  >
                    <path
                      d="M0 0h20v20H0z"
                      fill="#fff"
                    />
                  </clippath>
                </defs>
              </svg>
            </span>
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Customer Name"
            >
              Reapit Sales
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Reapit Customer Code"
            >
              RES
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Customer Address"
            >
              1 Big House Something Something UK BB1 1BB
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Date Installed"
            >
              23-03-2022
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Installed By"
            >
              <a
                href="mailto:example@mail.com?subject=Your%20recent%20installation%20of%20MOCK_APP_NAME%20in%20the%20Reapit%20AppMarket"
                rel="noreferrer"
                target="_blank"
              >
                example@mail.com
              </a>
            </div>
          </div>
          <div
            class="mocked-styled-109 el-table-expandable-row-trigger-cell"
            role="cell"
            tabindex="0"
          >
            <span
              class="el-intent-default el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                title="Icon image with name more"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="mocked-styled-113 el-table-expandable-row"
        >
          <div
            class="mocked-styled-114 el-table-expandable-container"
          >
            <div
              class="mocked-styled-2 el-button-group"
            >
              <div
                class="el-button-group-align-center el-button-group-inner"
              >
                <button
                  class="el-intent-primary el-button"
                >
                  <div
                    class="mocked-styled-0 el-button-loader"
                  />
                  Show Installed Offices
                </button>
                <button
                  class="el-intent-danger el-button"
                  type="button"
                >
                  <div
                    class="mocked-styled-0 el-button-loader"
                  />
                  Uninstall
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mocked-styled-110 el-table-row-container"
        role="row"
      >
        <div
          class="mocked-styled-103 el-table-row"
        >
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <span
              class="el-intent-default el-icon"
              style="font-size: 1.25rem;"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                style="font-size: 1.25rem;"
                title="Icon image with name flatInfographic"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-path="url(#flatInfographic_svg__a)"
                >
                  <path
                    d="M20 20h-9V4h9v16"
                    fill="#d8dee4"
                  />
                  <path
                    d="M13 2h-1v18h1zM1.28 0v1.787H0V20h12V0z"
                    fill="#798da1"
                  />
                  <path
                    d="M5.149 4.505H3.617V6.38H5.15zM8.962 4.505H7.43V6.38h1.532zM3.617 8.255H5.15v1.875H3.617zM8.962 8.255H7.43v1.875h1.532zM3.617 12.006H5.15v1.875H3.617zM8.962 12.006H7.43v1.875h1.532zM3.617 15.756H5.15v1.875H3.617zM8.962 15.756H7.43v1.875h1.532z"
                    fill="#fff"
                  />
                  <path
                    d="M16.281 8.255h-1.532v1.875h1.532zM16.281 12.006h-1.532v1.875h1.532z"
                    fill="#798da1"
                  />
                </g>
                <defs>
                  <clippath
                    id="flatInfographic_svg__a"
                  >
                    <path
                      d="M0 0h20v20H0z"
                      fill="#fff"
                    />
                  </clippath>
                </defs>
              </svg>
            </span>
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Customer Name"
            >
              Foo Bar
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Reapit Customer Code"
            >
              MXX
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Customer Address"
            >
              1 Big House Something Something UK BB1 1BB
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Date Installed"
            >
              11-01-2022
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Installed By"
            >
              <a
                href="mailto:example@mail.com?subject=Your%20recent%20installation%20of%20MOCK_APP_NAME_TWO%20in%20the%20Reapit%20AppMarket"
                rel="noreferrer"
                target="_blank"
              >
                example@mail.com
              </a>
            </div>
          </div>
          <div
            class="mocked-styled-109 el-table-expandable-row-trigger-cell"
            role="cell"
            tabindex="0"
          >
            <span
              class="el-intent-default el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                title="Icon image with name more"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="mocked-styled-113 el-table-expandable-row"
        >
          <div
            class="mocked-styled-114 el-table-expandable-container"
          >
            <div
              class="mocked-styled-2 el-button-group"
            >
              <div
                class="el-button-group-align-center el-button-group-inner"
              >
                <button
                  class="el-intent-danger el-button"
                  type="button"
                >
                  <div
                    class="mocked-styled-0 el-button-loader"
                  />
                  Uninstall
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mocked-styled-71 el-pagination-wrap"
    >
      <button
        aria-label="Previous"
        class="mocked-styled-74 el-pagination-button"
        data-testid="back-button"
        role="button"
        type="button"
      >
        <span
          class="el-icon-new el-icon"
        >
          <svg
            fill="none"
            height="1em"
            role="img"
            title="Icon image with name chevronLeft"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.496 20.004a1 1 0 0 1-.71-.29l-6.99-7a1 1 0 0 1 0-1.42l6.99-7a1.002 1.002 0 0 1 1.678.45c.093.347-.006.716-.26.97l-6.291 6.29 6.292 6.29a1 1 0 0 1-.71 1.71"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
      <div
        class="mocked-styled-72 el-pagination-text"
      >
        <input
          aria-label="Current page number, edit to select page of 1 available"
          class="mocked-styled-73 el-pagination-input"
          value="1"
        />
         
        of 
        1
      </div>
      <button
        aria-label="Next"
        class="mocked-styled-74 el-pagination-button"
        data-testid="forward-button"
        role="button"
        type="button"
      >
        <span
          class="el-icon-new el-icon"
        >
          <svg
            fill="none"
            height="1em"
            role="img"
            title="Icon image with name chevronRight"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.505 20.004a1 1 0 0 1-1.005-1 1 1 0 0 1 .295-.71l6.292-6.29-6.292-6.29a1.005 1.005 0 0 1 0-1.42 1 1 0 0 1 1.419 0l6.99 7a1 1 0 0 1 0 1.42l-6.99 7a1 1 0 0 1-.71.29"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      aria-hidden="true"
      class="mocked-styled-146 el-mobile-controls-bg"
    />
    <div
      class="mocked-styled-147 el-mobile-controls"
      id=":r1:"
    >
      <button
        aria-controls=":r1:"
        class="el-floating-button el-intent-primary el-button"
      >
        <div
          class="mocked-styled-0 el-button-loader"
        />
        <span
          class="el-icon-new el-icon"
        >
          <svg
            fill="none"
            height="1em"
            role="img"
            title="Icon image with name menu"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppInstallations should match a snapshot when loading 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <h1
        class="el-text-base el-title"
      >
        Installations
      </h1>
      <div
        class="mocked-styled-44 el-loader-container"
      >
        <div
          class="mocked-styled-46 el-loader"
        >
          <div
            class="mocked-styled-47 el-loader-moving-bar"
          />
        </div>
      </div>
      <div
        aria-hidden="true"
        class="mocked-styled-146 el-mobile-controls-bg"
      />
      <div
        class="mocked-styled-147 el-mobile-controls"
        id=":r2:"
      >
        <button
          aria-controls=":r2:"
          class="el-floating-button el-intent-primary el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          <span
            class="el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name menu"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <h1
      class="el-text-base el-title"
    >
      Installations
    </h1>
    <div
      class="mocked-styled-44 el-loader-container"
    >
      <div
        class="mocked-styled-46 el-loader"
      >
        <div
          class="mocked-styled-47 el-loader-moving-bar"
        />
      </div>
    </div>
    <div
      aria-hidden="true"
      class="mocked-styled-146 el-mobile-controls-bg"
    />
    <div
      class="mocked-styled-147 el-mobile-controls"
      id=":r2:"
    >
      <button
        aria-controls=":r2:"
        class="el-floating-button el-intent-primary el-button"
      >
        <div
          class="mocked-styled-0 el-button-loader"
        />
        <span
          class="el-icon-new el-icon"
        >
          <svg
            fill="none"
            height="1em"
            role="img"
            title="Icon image with name menu"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppInstallations should match a snapshot when no installations 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <h1
        class="el-text-base el-title"
      >
        Installations
      </h1>
      <div
        class="el-intent-primary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
        role="status"
      >
        <div
          class="el-pn-icon"
          data-testid="close-icon"
        >
          <span
            class="el-icon-new el-icon"
            style="font-size: 1.25rem;"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              style="font-size: 1.25rem;"
              title="Icon image with name info"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2m1.143 15.714h-2.286v-6h2.286zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428"
                fill="currentColor"
              />
            </svg>
          </span>
        </div>
        <div
          aria-live="polite"
          class="el-pn-content"
        >
          No installations for the application.
        </div>
      </div>
      <div
        aria-hidden="true"
        class="mocked-styled-146 el-mobile-controls-bg"
      />
      <div
        class="mocked-styled-147 el-mobile-controls"
        id=":r3:"
      >
        <button
          aria-controls=":r3:"
          class="el-floating-button el-intent-primary el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          <span
            class="el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name menu"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <h1
      class="el-text-base el-title"
    >
      Installations
    </h1>
    <div
      class="el-intent-primary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
      role="status"
    >
      <div
        class="el-pn-icon"
        data-testid="close-icon"
      >
        <span
          class="el-icon-new el-icon"
          style="font-size: 1.25rem;"
        >
          <svg
            fill="none"
            height="1em"
            role="img"
            style="font-size: 1.25rem;"
            title="Icon image with name info"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2m1.143 15.714h-2.286v-6h2.286zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428"
              fill="currentColor"
            />
          </svg>
        </span>
      </div>
      <div
        aria-live="polite"
        class="el-pn-content"
      >
        No installations for the application.
      </div>
    </div>
    <div
      aria-hidden="true"
      class="mocked-styled-146 el-mobile-controls-bg"
    />
    <div
      class="mocked-styled-147 el-mobile-controls"
      id=":r3:"
    >
      <button
        aria-controls=":r3:"
        class="el-floating-button el-intent-primary el-button"
      >
        <div
          class="mocked-styled-0 el-button-loader"
        />
        <span
          class="el-icon-new el-icon"
        >
          <svg
            fill="none"
            height="1em"
            role="img"
            title="Icon image with name menu"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppInstallations should match a snapshot when no response 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <h1
        class="el-text-base el-title"
      >
        Installations
      </h1>
      <div
        aria-hidden="true"
        class="mocked-styled-146 el-mobile-controls-bg"
      />
      <div
        class="mocked-styled-147 el-mobile-controls"
        id=":r4:"
      >
        <button
          aria-controls=":r4:"
          class="el-floating-button el-intent-primary el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          <span
            class="el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name menu"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <h1
      class="el-text-base el-title"
    >
      Installations
    </h1>
    <div
      aria-hidden="true"
      class="mocked-styled-146 el-mobile-controls-bg"
    />
    <div
      class="mocked-styled-147 el-mobile-controls"
      id=":r4:"
    >
      <button
        aria-controls=":r4:"
        class="el-floating-button el-intent-primary el-button"
      >
        <div
          class="mocked-styled-0 el-button-loader"
        />
        <span
          class="el-icon-new el-icon"
        >
          <svg
            fill="none"
            height="1em"
            role="img"
            title="Icon image with name menu"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppInstallations should match snapshot for mobile view 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
      <div />
    </div>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <h1
        class="el-text-base el-title"
      >
        Installations
      </h1>
      <p
        class="el-text-base el-body-text el-has-grey-text el-has-section-margin"
      >
        The table below gives you the information you need to understand Reapit Client organisations that have installed your application for use. In addition, you can force terminate a customer installation by using the call to action on each row. For more information on the installations table
        <a>
           see here
        </a>
        .
      </p>
      <div
        class="el-mb11 el-table"
        data-has-call-to-action="false"
        data-has-expandable-action="true"
        data-num-columns-excl-action-col="5"
        role="table"
      >
        <div
          class="mocked-styled-101 el-table-headers-row"
          role="row"
        >
          <div
            aria-label="Customer Name"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Customer Name
          </div>
          <div
            aria-label="Reapit Customer Code"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Reapit Customer Code
          </div>
          <div
            aria-label="Customer Address"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Customer Address
          </div>
          <div
            aria-label="Date Installed"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Date Installed
          </div>
          <div
            aria-label="Installed By"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Installed By
          </div>
          <div
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            <span
              class="el-intent-default el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                title="Icon image with name settings"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.2 7.2 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.5 7.5 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.5 6.5 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.2 7.2 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27zM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="mocked-styled-110 el-table-row-container"
          role="row"
        >
          <div
            class="mocked-styled-103 el-table-row"
          >
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <span
                class="el-intent-default el-icon"
                style="font-size: 1.25rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  style="font-size: 1.25rem;"
                  title="Icon image with name flatInfographic"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    clip-path="url(#flatInfographic_svg__a)"
                  >
                    <path
                      d="M20 20h-9V4h9v16"
                      fill="#d8dee4"
                    />
                    <path
                      d="M13 2h-1v18h1zM1.28 0v1.787H0V20h12V0z"
                      fill="#798da1"
                    />
                    <path
                      d="M5.149 4.505H3.617V6.38H5.15zM8.962 4.505H7.43V6.38h1.532zM3.617 8.255H5.15v1.875H3.617zM8.962 8.255H7.43v1.875h1.532zM3.617 12.006H5.15v1.875H3.617zM8.962 12.006H7.43v1.875h1.532zM3.617 15.756H5.15v1.875H3.617zM8.962 15.756H7.43v1.875h1.532z"
                      fill="#fff"
                    />
                    <path
                      d="M16.281 8.255h-1.532v1.875h1.532zM16.281 12.006h-1.532v1.875h1.532z"
                      fill="#798da1"
                    />
                  </g>
                  <defs>
                    <clippath
                      id="flatInfographic_svg__a"
                    >
                      <path
                        d="M0 0h20v20H0z"
                        fill="#fff"
                      />
                    </clippath>
                  </defs>
                </svg>
              </span>
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Customer Name"
              >
                Reapit Sales
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Reapit Customer Code"
              >
                RES
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Customer Address"
              >
                1 Big House Something Something UK BB1 1BB
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Date Installed"
              >
                23-03-2022
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Installed By"
              >
                <a
                  href="mailto:example@mail.com?subject=Your%20recent%20installation%20of%20MOCK_APP_NAME%20in%20the%20Reapit%20AppMarket"
                  rel="noreferrer"
                  target="_blank"
                >
                  example@mail.com
                </a>
              </div>
            </div>
            <div
              class="mocked-styled-109 el-table-expandable-row-trigger-cell"
              role="cell"
              tabindex="0"
            >
              <span
                class="el-intent-default el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  title="Icon image with name more"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="mocked-styled-113 el-table-expandable-row"
          >
            <div
              class="mocked-styled-114 el-table-expandable-container"
            >
              <div
                class="mocked-styled-2 el-button-group"
              >
                <div
                  class="el-button-group-align-center el-button-group-inner"
                >
                  <button
                    class="el-intent-primary el-button"
                  >
                    <div
                      class="mocked-styled-0 el-button-loader"
                    />
                    Show Installed Offices
                  </button>
                  <button
                    class="el-intent-danger el-button"
                    type="button"
                  >
                    <div
                      class="mocked-styled-0 el-button-loader"
                    />
                    Uninstall
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mocked-styled-110 el-table-row-container"
          role="row"
        >
          <div
            class="mocked-styled-103 el-table-row"
          >
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <span
                class="el-intent-default el-icon"
                style="font-size: 1.25rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  style="font-size: 1.25rem;"
                  title="Icon image with name flatInfographic"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    clip-path="url(#flatInfographic_svg__a)"
                  >
                    <path
                      d="M20 20h-9V4h9v16"
                      fill="#d8dee4"
                    />
                    <path
                      d="M13 2h-1v18h1zM1.28 0v1.787H0V20h12V0z"
                      fill="#798da1"
                    />
                    <path
                      d="M5.149 4.505H3.617V6.38H5.15zM8.962 4.505H7.43V6.38h1.532zM3.617 8.255H5.15v1.875H3.617zM8.962 8.255H7.43v1.875h1.532zM3.617 12.006H5.15v1.875H3.617zM8.962 12.006H7.43v1.875h1.532zM3.617 15.756H5.15v1.875H3.617zM8.962 15.756H7.43v1.875h1.532z"
                      fill="#fff"
                    />
                    <path
                      d="M16.281 8.255h-1.532v1.875h1.532zM16.281 12.006h-1.532v1.875h1.532z"
                      fill="#798da1"
                    />
                  </g>
                  <defs>
                    <clippath
                      id="flatInfographic_svg__a"
                    >
                      <path
                        d="M0 0h20v20H0z"
                        fill="#fff"
                      />
                    </clippath>
                  </defs>
                </svg>
              </span>
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Customer Name"
              >
                Foo Bar
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Reapit Customer Code"
              >
                MXX
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Customer Address"
              >
                1 Big House Something Something UK BB1 1BB
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Date Installed"
              >
                11-01-2022
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Installed By"
              >
                <a
                  href="mailto:example@mail.com?subject=Your%20recent%20installation%20of%20MOCK_APP_NAME_TWO%20in%20the%20Reapit%20AppMarket"
                  rel="noreferrer"
                  target="_blank"
                >
                  example@mail.com
                </a>
              </div>
            </div>
            <div
              class="mocked-styled-109 el-table-expandable-row-trigger-cell"
              role="cell"
              tabindex="0"
            >
              <span
                class="el-intent-default el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  title="Icon image with name more"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="mocked-styled-113 el-table-expandable-row"
          >
            <div
              class="mocked-styled-114 el-table-expandable-container"
            >
              <div
                class="mocked-styled-2 el-button-group"
              >
                <div
                  class="el-button-group-align-center el-button-group-inner"
                >
                  <button
                    class="el-intent-danger el-button"
                    type="button"
                  >
                    <div
                      class="mocked-styled-0 el-button-loader"
                    />
                    Uninstall
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mocked-styled-71 el-pagination-wrap"
      >
        <button
          aria-label="Previous"
          class="mocked-styled-74 el-pagination-button"
          data-testid="back-button"
          role="button"
          type="button"
        >
          <span
            class="el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name chevronLeft"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.496 20.004a1 1 0 0 1-.71-.29l-6.99-7a1 1 0 0 1 0-1.42l6.99-7a1.002 1.002 0 0 1 1.678.45c.093.347-.006.716-.26.97l-6.291 6.29 6.292 6.29a1 1 0 0 1-.71 1.71"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <div
          class="mocked-styled-72 el-pagination-text"
        >
          <input
            aria-label="Current page number, edit to select page of 1 available"
            class="mocked-styled-73 el-pagination-input"
            value="1"
          />
           
          of 
          1
        </div>
        <button
          aria-label="Next"
          class="mocked-styled-74 el-pagination-button"
          data-testid="forward-button"
          role="button"
          type="button"
        >
          <span
            class="el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name chevronRight"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.505 20.004a1 1 0 0 1-1.005-1 1 1 0 0 1 .295-.71l6.292-6.29-6.292-6.29a1.005 1.005 0 0 1 0-1.42 1 1 0 0 1 1.419 0l6.99 7a1 1 0 0 1 0 1.42l-6.99 7a1 1 0 0 1-.71.29"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        aria-hidden="true"
        class="mocked-styled-146 el-mobile-controls-bg"
      />
      <div
        class="mocked-styled-147 el-mobile-controls"
        id=":r7:"
      >
        <button
          aria-controls=":r7:"
          class="el-floating-button el-intent-primary el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          <span
            class="el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name menu"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <h1
      class="el-text-base el-title"
    >
      Installations
    </h1>
    <p
      class="el-text-base el-body-text el-has-grey-text el-has-section-margin"
    >
      The table below gives you the information you need to understand Reapit Client organisations that have installed your application for use. In addition, you can force terminate a customer installation by using the call to action on each row. For more information on the installations table
      <a>
         see here
      </a>
      .
    </p>
    <div
      class="el-mb11 el-table"
      data-has-call-to-action="false"
      data-has-expandable-action="true"
      data-num-columns-excl-action-col="5"
      role="table"
    >
      <div
        class="mocked-styled-101 el-table-headers-row"
        role="row"
      >
        <div
          aria-label="Customer Name"
          class="mocked-styled-102 el-table-header"
          role="columnheader"
        >
          Customer Name
        </div>
        <div
          aria-label="Reapit Customer Code"
          class="mocked-styled-102 el-table-header"
          role="columnheader"
        >
          Reapit Customer Code
        </div>
        <div
          aria-label="Customer Address"
          class="mocked-styled-102 el-table-header"
          role="columnheader"
        >
          Customer Address
        </div>
        <div
          aria-label="Date Installed"
          class="mocked-styled-102 el-table-header"
          role="columnheader"
        >
          Date Installed
        </div>
        <div
          aria-label="Installed By"
          class="mocked-styled-102 el-table-header"
          role="columnheader"
        >
          Installed By
        </div>
        <div
          class="mocked-styled-102 el-table-header"
          role="columnheader"
        >
          <span
            class="el-intent-default el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name settings"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.2 7.2 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.5 7.5 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.5 6.5 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.2 7.2 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27zM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
                fill="currentColor"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="mocked-styled-110 el-table-row-container"
        role="row"
      >
        <div
          class="mocked-styled-103 el-table-row"
        >
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <span
              class="el-intent-default el-icon"
              style="font-size: 1.25rem;"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                style="font-size: 1.25rem;"
                title="Icon image with name flatInfographic"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-path="url(#flatInfographic_svg__a)"
                >
                  <path
                    d="M20 20h-9V4h9v16"
                    fill="#d8dee4"
                  />
                  <path
                    d="M13 2h-1v18h1zM1.28 0v1.787H0V20h12V0z"
                    fill="#798da1"
                  />
                  <path
                    d="M5.149 4.505H3.617V6.38H5.15zM8.962 4.505H7.43V6.38h1.532zM3.617 8.255H5.15v1.875H3.617zM8.962 8.255H7.43v1.875h1.532zM3.617 12.006H5.15v1.875H3.617zM8.962 12.006H7.43v1.875h1.532zM3.617 15.756H5.15v1.875H3.617zM8.962 15.756H7.43v1.875h1.532z"
                    fill="#fff"
                  />
                  <path
                    d="M16.281 8.255h-1.532v1.875h1.532zM16.281 12.006h-1.532v1.875h1.532z"
                    fill="#798da1"
                  />
                </g>
                <defs>
                  <clippath
                    id="flatInfographic_svg__a"
                  >
                    <path
                      d="M0 0h20v20H0z"
                      fill="#fff"
                    />
                  </clippath>
                </defs>
              </svg>
            </span>
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Customer Name"
            >
              Reapit Sales
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Reapit Customer Code"
            >
              RES
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Customer Address"
            >
              1 Big House Something Something UK BB1 1BB
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Date Installed"
            >
              23-03-2022
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Installed By"
            >
              <a
                href="mailto:example@mail.com?subject=Your%20recent%20installation%20of%20MOCK_APP_NAME%20in%20the%20Reapit%20AppMarket"
                rel="noreferrer"
                target="_blank"
              >
                example@mail.com
              </a>
            </div>
          </div>
          <div
            class="mocked-styled-109 el-table-expandable-row-trigger-cell"
            role="cell"
            tabindex="0"
          >
            <span
              class="el-intent-default el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                title="Icon image with name more"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="mocked-styled-113 el-table-expandable-row"
        >
          <div
            class="mocked-styled-114 el-table-expandable-container"
          >
            <div
              class="mocked-styled-2 el-button-group"
            >
              <div
                class="el-button-group-align-center el-button-group-inner"
              >
                <button
                  class="el-intent-primary el-button"
                >
                  <div
                    class="mocked-styled-0 el-button-loader"
                  />
                  Show Installed Offices
                </button>
                <button
                  class="el-intent-danger el-button"
                  type="button"
                >
                  <div
                    class="mocked-styled-0 el-button-loader"
                  />
                  Uninstall
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mocked-styled-110 el-table-row-container"
        role="row"
      >
        <div
          class="mocked-styled-103 el-table-row"
        >
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <span
              class="el-intent-default el-icon"
              style="font-size: 1.25rem;"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                style="font-size: 1.25rem;"
                title="Icon image with name flatInfographic"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-path="url(#flatInfographic_svg__a)"
                >
                  <path
                    d="M20 20h-9V4h9v16"
                    fill="#d8dee4"
                  />
                  <path
                    d="M13 2h-1v18h1zM1.28 0v1.787H0V20h12V0z"
                    fill="#798da1"
                  />
                  <path
                    d="M5.149 4.505H3.617V6.38H5.15zM8.962 4.505H7.43V6.38h1.532zM3.617 8.255H5.15v1.875H3.617zM8.962 8.255H7.43v1.875h1.532zM3.617 12.006H5.15v1.875H3.617zM8.962 12.006H7.43v1.875h1.532zM3.617 15.756H5.15v1.875H3.617zM8.962 15.756H7.43v1.875h1.532z"
                    fill="#fff"
                  />
                  <path
                    d="M16.281 8.255h-1.532v1.875h1.532zM16.281 12.006h-1.532v1.875h1.532z"
                    fill="#798da1"
                  />
                </g>
                <defs>
                  <clippath
                    id="flatInfographic_svg__a"
                  >
                    <path
                      d="M0 0h20v20H0z"
                      fill="#fff"
                    />
                  </clippath>
                </defs>
              </svg>
            </span>
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Customer Name"
            >
              Foo Bar
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Reapit Customer Code"
            >
              MXX
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Customer Address"
            >
              1 Big House Something Something UK BB1 1BB
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Date Installed"
            >
              11-01-2022
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Installed By"
            >
              <a
                href="mailto:example@mail.com?subject=Your%20recent%20installation%20of%20MOCK_APP_NAME_TWO%20in%20the%20Reapit%20AppMarket"
                rel="noreferrer"
                target="_blank"
              >
                example@mail.com
              </a>
            </div>
          </div>
          <div
            class="mocked-styled-109 el-table-expandable-row-trigger-cell"
            role="cell"
            tabindex="0"
          >
            <span
              class="el-intent-default el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                title="Icon image with name more"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="mocked-styled-113 el-table-expandable-row"
        >
          <div
            class="mocked-styled-114 el-table-expandable-container"
          >
            <div
              class="mocked-styled-2 el-button-group"
            >
              <div
                class="el-button-group-align-center el-button-group-inner"
              >
                <button
                  class="el-intent-danger el-button"
                  type="button"
                >
                  <div
                    class="mocked-styled-0 el-button-loader"
                  />
                  Uninstall
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mocked-styled-71 el-pagination-wrap"
    >
      <button
        aria-label="Previous"
        class="mocked-styled-74 el-pagination-button"
        data-testid="back-button"
        role="button"
        type="button"
      >
        <span
          class="el-icon-new el-icon"
        >
          <svg
            fill="none"
            height="1em"
            role="img"
            title="Icon image with name chevronLeft"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.496 20.004a1 1 0 0 1-.71-.29l-6.99-7a1 1 0 0 1 0-1.42l6.99-7a1.002 1.002 0 0 1 1.678.45c.093.347-.006.716-.26.97l-6.291 6.29 6.292 6.29a1 1 0 0 1-.71 1.71"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
      <div
        class="mocked-styled-72 el-pagination-text"
      >
        <input
          aria-label="Current page number, edit to select page of 1 available"
          class="mocked-styled-73 el-pagination-input"
          value="1"
        />
         
        of 
        1
      </div>
      <button
        aria-label="Next"
        class="mocked-styled-74 el-pagination-button"
        data-testid="forward-button"
        role="button"
        type="button"
      >
        <span
          class="el-icon-new el-icon"
        >
          <svg
            fill="none"
            height="1em"
            role="img"
            title="Icon image with name chevronRight"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.505 20.004a1 1 0 0 1-1.005-1 1 1 0 0 1 .295-.71l6.292-6.29-6.292-6.29a1.005 1.005 0 0 1 0-1.42 1 1 0 0 1 1.419 0l6.99 7a1 1 0 0 1 0 1.42l-6.99 7a1 1 0 0 1-.71.29"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      aria-hidden="true"
      class="mocked-styled-146 el-mobile-controls-bg"
    />
    <div
      class="mocked-styled-147 el-mobile-controls"
      id=":r7:"
    >
      <button
        aria-controls=":r7:"
        class="el-floating-button el-intent-primary el-button"
      >
        <div
          class="mocked-styled-0 el-button-loader"
        />
        <span
          class="el-icon-new el-icon"
        >
          <svg
            fill="none"
            height="1em"
            role="img"
            title="Icon image with name menu"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
